Feature test for chronological viewing of peeps created and passing

--- a/views/peeps/index.erb
+++ b/views/peeps/index.erb
@@ -4,7 +4,7 @@
 <h1>PEEPS!</h1>
 <ul>
 <% @chitterweb.each do |peep| %> 
-    <li><%= peep %></li>
+    <li><%= peep.peep %></h2> <h6>Posted on: <%= Date.strptime(peep.timestamp) %></h6></li>
   <% end %>
 </ul>
 </head> 
